<resources>
    <string name="app_name">SmartBlindAddon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_troubleshoot">Troubleshooting</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="homepage">Home</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_manage_blinds">Manage Blinds</string>
    <string name="menu_schedule_blind">Schedule Blinds</string>
    <string name="settings">Settings</string>
    <string name="contact_open_dialer">Call Customer Service</string>
    <string name="enable">Enable</string>
    <string name="permission_storage_title">Read Storage permission</string>
    <string name="prompt1">Please enable access to storage.</string>
    <string name="schedule">Schedule</string>
    <string name="manage_blinds">Manage blinds</string>
    <string name="sign_in">Sign In</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="leave_app">Are you sure you want to exit the app</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="lock_screen_to_portrait_mode">Lock Screen to Portrait Mode</string>
    <string name="small">Small</string>
    <string name="black_white_mode"><![CDATA[Black & White Mode]]></string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="text_size">Text Size:</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="settings_title">Settings</string>
    <string name="minimal_mode">Minimal Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="dark_mode_disabled">dark mode is disabled</string>
    <string name="dark_mode_enabled">dark mode is enabled</string>
    <string name="notif_enable">notifications enabled</string>
    <string name="notif_disable">notifications disabled</string>
    <string name="portriat_enable">portrait mode enabled</string>
    <string name="portrait_disable">portrait mode disabled</string>
    <string name="submit">Submit</string>
    <string name="customer_service">0928171771</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="add">ADD</string>
    <string name="blind_location">Blind Location</string>
    <string name="blind_key">Blind Key</string>
    <string name="blind_height">Blind Height</string>
    <string name="new_user">New User</string>
    <string name="register">Register</string>
    <string name="schedule_submit">Submit</string>
    <string name="schedule_select_time">SELECT TIME</string>
    <string name="name_error">Full name is required!</string>
    <string name="email_error">Email address is required!</string>
    <string name="password_error">Password is required!</string>
    <string name="open">Open: </string>
    <string name="closing">Closing: </string>
    <string name="loc">Location: </string>
    <string name="temp">Temperature: </string>
    <string name="li">Light: </string>
    <string name="no_internet">Please connect to the internet to see blinds or see troubleshooting to guidance</string>
    <string name="no_user">Please Login to see blinds</string>
    <string name="no_users">Please Login to see Blinds</string>
    <string name="schedule_select_date">SELECT DATE</string>
    <string name="new_user_name">Name</string>
    <string name="new_user_enter_email">Enter Email</string>
    <string name="new_user_enter_password">Enter Password</string>
    <string name="new_user_confirm_password">Confirm Password</string>
    <string name="new_user_submit_new_user">Submit New User</string>
    <string name="logout">Logout</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="temperature_monitoring">Temperature Monitoring</string>
    <string name="temperature_monitoring_screen">Temperature Monitoring Screen</string>
    <string name="monitoring">Monitoring</string>
    <string name="open_close">OPEN/CLOSE</string>
    <string name="light_percentage">0%</string>
    <string name="set_light">Set light</string>
    <string name="monitoring_submit">Apply</string>
    <string name="monitoring_room_temperature">Room Temperature</string>
    <string name="maximum">Maximum:</string>
    <string name="minimum">Minimum:</string>
    <string name="monitoring_apply">Apply</string>
    <string name="manual_automatic">Manual/Automatic</string>
    <string name="room_light">Room Light</string>
    <string name="maximum_light">Maximum:</string>
    <string name="minimum_light">Minimum:</string>
    <string name="room_light_">Room Light</string>
    <string name="maximum_light_">Maximum:</string>


    <string-array name="contact_emails">
        <item>Developer\'s Contact</item>
        <item>chrisjanellemutuc@gmail.com</item>
        <item>amitpunit117@gmail.com</item>
        <item>gazaboy1001@gmail.com</item>
        <item>vypere1994@gmail.com</item>
    </string-array>

    <string name="distance_readings">Current Distance: </string>
    <string name="distance">Distance</string>



</resources>