<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ca.t10.blinddev.it.smartblindaddon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ca.t10.blinddev.it.smartblindaddon.ui.troubleshoot.TroubleshootFragment"
        android:label="@string/menu_troubleshoot"
        tools:layout="@layout/fragment_troubleshoot" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ca.t10.blinddev.it.smartblindaddon.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>